# ChunkWrap

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  pytest.ini  sonar-project.properties
src/ChunkWrap/: ChunkWrap.py
src/chunkwrap/: chunkwrap.py  core.py  output.py
tests/: test_ChunkWrap.py  test_chunker.py  test_coverage_boost.py
